--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         z-index: 1000;
         animation: slideUp 0.4s ease-out;
         box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-        display: none; /* Initially hidden */
+        display: none;
     }
 
     .message.active {
@@ -336,7 +336,7 @@
                 <li><i class="fas fa-play"></i> Entre na sala desejada</li>
                 <li><i class="fas fa-comment"></i> Acompanhe as atualizações da sala</li>
                 <li><i class="fas fa-sign-out-alt"></i> Saia da sala quando quiser</li>
-                <li><i class="fas fa-sign-out-alt"></i> Pra usar outra conta, vai ir no tres pontinhos e atualizar.</li>
+                <li><i class="fas fa-sign-out-alt"></i> Pra usar outra conta, vai ir no três pontinhos e atualizar.</li>
             </ul>
         </div>
 
